--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       <div class="section__container tour__container">
         <h4>Watch Our Video Tour</h4>
         <div class="video__container">
-          <video src="photo/japan.mp4" autoplay loop muted></video>
+          <video src="photo/Japan.mp4" autoplay loop muted></video>
         </div>
       </div>
     </section>
